--- a/style.css
+++ b/style.css
@@ -114,8 +114,10 @@ footer {
 
 .card img {
   width: 100%;
-  height: 200px;
+  height: auto;
+  max-height: 200px;
   object-fit: cover;
+  display: block;
 }
 
 .card h3 {
