--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ footer {
 .card img {
   width: 100%;
   height: auto;
-  max-height: 200px;
+  aspect-ratio: 4 / 3;
   object-fit: cover;
   display: block;
+  border-radius: 30px 30px 0 0; 
 }
 
 .card h3 {
@@ -187,12 +188,14 @@ footer {
   flex-shrink: 0;
   margin-top: auto;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   .card img {
+    aspect-ratio: 4 / 3;
     height: auto;
-    max-height: 180px;
+    object-fit: cover;
   }
 }
+
 
   .overlay {
     padding: 20px;
