--- a/style.css
+++ b/style.css
@@ -113,8 +113,10 @@ footer {
 }
 
 .card img {
+  width:100%;
   height: auto;
   aspect-ratio: 4 / 3;
+  object-fit: cver;
   display: block;
   border-radius: 30px 30px 0 0; 
 }
