--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ footer {
   width:100%;
   height: auto;
   aspect-ratio: 4 / 3;
-  object-fit: cver;
+  object-fit: contain;
   display: block;
   border-radius: 30px 30px 0 0; 
 }
